# puzzle-library

./: README.md
advent_of_code/: .gitignore  CMakeLists.txt  README.md  build.sh
advent_of_code/src/day_1/: CMakeLists.txt  README.md
advent_of_code/src/day_1/include/day_1/: historian_hysteria.hpp
advent_of_code/src/day_1/src/: historian_hysteria.cpp  main.cpp
advent_of_code/src/day_1/tests/: test_historian_hysteria.cpp
advent_of_code/src/day_2/: CMakeLists.txt  README.md
advent_of_code/src/day_2/data/: null_input.txt
advent_of_code/src/day_2/include/day_2/: red_reports.hpp
advent_of_code/src/day_2/src/: main.cpp  red_reports.cpp
advent_of_code/src/day_2/tests/: test_red_reports.cpp
advent_of_code/src/day_3/: CMakeLists.txt  README.md
advent_of_code/src/day_3/include/day_3/: mull_over.hpp
advent_of_code/src/day_3/src/: main.cpp  mull_over.cpp
advent_of_code/src/day_3/tests/: test_mull_over.cpp
advent_of_code/src/day_4/: CMakeLists.txt  README.md
advent_of_code/src/day_4/data/: false_input.txt
advent_of_code/src/day_4/include/day_4/: ceres_search.hpp
advent_of_code/src/day_4/src/: ceres_search.cpp  main.cpp
advent_of_code/src/day_4/tests/: test_ceres_search.cpp
advent_of_code/src/day_5/: CMakeLists.txt  README.md
advent_of_code/src/day_5/include/day_5/: print_queue.hpp
advent_of_code/src/day_5/src/: main.cpp  print_queue.cpp
advent_of_code/src/day_5/tests/: test_print_queue.cpp
advent_of_code/src/day_6/: CMakeLists.txt  README.md
advent_of_code/src/day_6/include/day_6/: guard_gallivant.hpp
advent_of_code/src/day_6/src/: guard_gallivant.cpp  main.cpp
advent_of_code/src/day_6/tests/: test_guard_gallivant.cpp
coding_exercises/: CMakeLists.txt  README.md
coding_exercises/src/person_handling/: CMakeLists.txt  README.md
coding_exercises/src/person_handling/include/person_handling/: person.hpp  person_handler.hpp
coding_exercises/src/person_handling/src/: person_handler.cpp  plane.cpp
coding_exercises/src/person_handling/tests/: tests_person_handler.cpp
test_case/: CMakeLists.txt  README.md
test_case/src/problem1/: CMakeLists.txt  README.md
test_case/src/problem1/include/problem1/: first_problem.hpp
test_case/src/problem1/src/: first_problem.cpp  main.cpp
test_case/src/problem1/tests/: tests_first_problem.cpp
